--- a/java-servlet-demo/src/main/webapp/WEB-INF/web.xml
+++ b/java-servlet-demo/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,15 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
+  <context-param>
+    <param-name>contextClass</param-name>
+    <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+  </context-param>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>com.cooper.spring.AppConfig</param-value>
+  </context-param>
+
   <filter>
     <filter-name>myFilter</filter-name>
     <filter-class>com.cooper.MyFilter</filter-class>
@@ -17,7 +26,7 @@
   </filter-mapping>
 
   <listener>
-    <listener-class>com.cooper.MyListener</listener-class>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
 
   <servlet>
